# Mastertools

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh  clipping_plan.txt  run.sh
engine/: CMakeLists.txt  entry.cpp
engine/.cache/clangd/index/: OBJ_Loader.h.F64FE7E0A7ADB002.idx  _fixes.hpp.232141D5AD667E12.idx  _vectorize.hpp.A0949A342AE8C467.idx  aabb.cpp.022EB23BA2F90587.idx  aabb.hpp.9878C613B2168DB6.idx  accel.hpp.BCECB5B75C6BB56B.idx  application.cpp.EC029D85A108A82E.idx  application.hpp.5C6D270CE8BF71B3.idx  buffer.hpp.3ACE832B6CEF5090.idx  callbacks.cpp.A7D52E3BC8E20F0E.idx  callbacks.hpp.28FA4E4E3CFB2886.idx  camera.cpp.F2650E9589C877FC.idx  camera.hpp.B44D5A53BF7E5187.idx  clipping.cpp.DFE181666FB9A74F.idx  clipping.hpp.7B25674F4097B719.idx  color.cpp.FE145C971137EFBC.idx  color.hpp.8D4D9663F85B7503.idx  common.hpp.983A8A99DE248C65.idx  compatibility.hpp.5A049F82508159CE.idx  compatibility.inl.859DF1517E85D6A9.idx  component_wise.hpp.26B2B7A24C34744C.idx  component_wise.inl.345D6E468E320766.idx  compute_common.hpp.D85C5FD6BD92A3C3.idx  compute_vector_relational.hpp.A8A118E96AFD79FE.idx  constants.hpp.3AB8FDC8FAC09561.idx  constants.inl.8008C35AA61B07A4.idx  context.cpp.D1016C44CF1E148B.idx  context.hpp.F309CA2955E995A7.idx  culling.hpp.3D43A0B482E7B1E7.idx  definitions.hpp.211F88C988193D1D.idx  emitter.cpp.9F0A73ED30D03856.idx  emitter.hpp.52900EAD4F1F6E94.idx  entry.cpp.8CEEE6C5034CBF34.idx  epsilon.hpp.741A18B69A03F195.idx  epsilon.inl.C980810327AD7D82.idx  euler_angles.hpp.38AD5AA1BB0280A7.idx  euler_angles.inl.78F869E5166D43FB.idx  exponential.hpp.64359C6BE89B2B2A.idx  fast_exponential.hpp.BC29339B3F16E7CF.idx  fast_exponential.inl.0B62E35F6D627048.idx  (+231 more)
engine/builtins/: default.map  default.mgls  fire_demo.mgls  light.mtl  settings.conf  skybox.mtl
engine/ext/: OBJ_Loader.h
engine/ext/glm/gtc/: packing.inl
engine/src/: application.cpp  application.hpp  buffer.hpp  callbacks.cpp  callbacks.hpp  camera.cpp  camera.hpp  clipping.cpp  clipping.hpp  color.cpp  color.hpp  context.cpp  context.hpp  culling.cpp  culling.hpp  defaults.cpp  defaults.hpp  definitions.hpp  emitter.cpp  emitter.hpp  entry.cpp  instance.hpp  keys.hpp  light.cpp  light.hpp  map.cpp  mesh.cpp  mesh.hpp  mtpch.hpp  object.cpp  object.hpp  render.cpp  render.hpp  render_tile.hpp  scene.cpp  scene.hpp  settings.cpp  settings.hpp  shader.hpp  skybox.cpp  (+8 more)
engine/src/accel/: accel.hpp
engine/src/core/: application.cpp  application.hpp  buffer.hpp  callbacks.cpp  callbacks.hpp  camera.cpp  camera.hpp  clipping.cpp  clipping.hpp  color.cpp  color.hpp  culling.hpp  definitions.hpp  emitter.cpp  emitter.hpp  entry.cpp  keys.hpp  light.cpp  light.hpp  noncopyable.hpp  settings.cpp  settings.hpp  skybox.cpp  skybox.hpp  timer.cpp  timer.hpp  triangle.cpp  triangle.hpp  uuid.cpp  uuid.hpp  vertex.hpp
engine/src/math/: aabb.cpp  aabb.hpp  intersection.cpp  intersection.hpp  octree.cpp  octree.hpp  plane.cpp  plane.hpp  ray.cpp  ray.hpp
engine/src/render/: context.cpp  context.hpp  render.cpp  render.hpp  render_tile.hpp
engine/src/resource/: mesh.cpp  mesh.hpp  object.cpp  object.hpp  scene.cpp  scene.hpp  shader.hpp  texture.cpp  texture.hpp
include/: aabb.hpp  barycentric.hpp  camera.hpp  clipping.hpp  edge.hpp  loader.hpp  mtdefs.hpp  plane.hpp  render.hpp  shader.hpp  texture.hpp
include/buffers/: buffer.hpp  framebuffer.hpp  ib.hpp  vb.hpp
mastertools/include/: allocator.h  analytics.h  engine.h  logging.h  mesh.h  mtassert.h  texture.h  types.h  window.h
mastertools/include/loaders/: wavefront_obj.h
mastertools/include/map/: camera.h  entity.h  map.h  mesh.h  node.h
mastertools/include/math/: 3d_utils.h  common.h  constants.h  mat3.h  mat4.h  matrix.h  quat.h  vec2.h  vec3.h  vec4.h  vector.h
mastertools/include/scene/: camera.h  entity.h  mesh.h  node.h  scene.h
mastertools/include/system/: library.h  text.h  time.h
mastertools/include/utility/: array.h  file.h  hash.h  mstring.h  mtstring.h  zero_init.h
mastertools/src/: allocator.c  engine.c  main.c  text.c  texture.c
mastertools/src/backend/: sdl_window.c
mastertools/src/backend/sdl/: window.c
mastertools/src/backend/windows/: library.c  time.c
mastertools/src/loaders/: wavefront_obj.c
mastertools/src/map/: camera.c  entity.c  map.c  mesh.c  node.c
mastertools/src/scene/: camera.c  entity.c  mesh.c  node.c  scene.c
mastertools/src/utility/: array.c  file.c  mstring.c  mtstring.c
src/: camera.cpp  clipping.cpp  loader.cpp  main.cpp  plane.cpp
